tools/cgoslx-gpio/CgosLib/Cgos.h


#define cgosret_bool CGOSDLLAPI unsigned int CGOSAPI

//***************************************************************************

//
// Board handle
//

typedef unsigned long HCGOS;

typedef struct {
  unsigned long dwSize;
  unsigned long dwType;
  unsigned long dwFlags;
  unsigned long dwNativeWidth;
  unsigned long dwNativeHeight;
  unsigned long dwRequestedWidth;
  unsigned long dwRequestedHeight;
  unsigned long dwRequestedBpp;
  unsigned long dwMaxBacklight;
  unsigned long dwMaxContrast;
  } CGOSVGAINFO;

cgosret_bool CgosVgaGetContrast(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting);

cgosret_bool CgosVgaSetContrast(HCGOS hCgos, unsigned long dwUnit, unsigned long dwSetting);

cgosret_bool CgosVgaGetContrastEnable(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting);

cgosret_bool CgosVgaSetContrastEnable(HCGOS hCgos, unsigned long dwUnit, unsigned long dwSetting);

cgosret_bool CgosVgaGetInfo(HCGOS hCgos, unsigned long dwUnit, CGOSVGAINFO *pInfo);


// Storage Areas

cgosret_ulong CgosStorageAreaCount(HCGOS hCgos, unsigned long dwUnit);

cgosret_ulong CgosStorageAreaType(HCGOS hCgos, unsigned long dwUnit);

cgosret_ulong CgosStorageAreaSize(HCGOS hCgos, unsigned long dwUnit);

cgosret_ulong CgosStorageAreaBlockSize(HCGOS hCgos, unsigned long dwUnit);

cgosret_bool CgosStorageAreaRead(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned char *pBytes, unsigned long dwLen);

cgosret_bool CgosStorageAreaWrite(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned char *pBytes, unsigned long dwLen);

cgosret_bool CgosStorageAreaErase(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned long dwLen);

cgosret_bool CgosStorageAreaEraseStatus(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned long dwLen, unsigned long *lpStatus);

cgosret_bool CgosStorageAreaLock(HCGOS hCgos, unsigned long dwUnit, unsigned long dwFlags, unsigned char *pBytes, unsigned long dwLen); // 1.2
cgosret_bool CgosStorageAreaUnlock(HCGOS hCgos, unsigned long dwUnit, unsigned long dwFlags, unsigned char *pBytes, unsigned long dwLen); // 1.2
cgosret_bool CgosStorageAreaIsLocked(HCGOS hCgos, unsigned long dwUnit, unsigned long dwFlags); // 1.2

// I2C Bus

cgosret_ulong CgosI2CCount(HCGOS hCgos);

cgosret_ulong CgosI2CType(HCGOS hCgos, unsigned long dwUnit);

cgosret_bool CgosI2CIsAvailable(HCGOS hCgos, unsigned long dwUnit);

cgosret_bool CgosI2CRead(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned char *pBytes, unsigned long dwLen);

cgosret_bool CgosI2CWrite(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned char *pBytes, unsigned long dwLen);


cgosret_bool CgosI2CReadRegister(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned short wReg, unsigned char *pDataByte);

cgosret_bool CgosI2CWriteRegister(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned short wReg, unsigned char bData);


cgosret_bool CgosI2CWriteReadCombined(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned char *pBytesWrite,
  unsigned long dwLenWrite, unsigned char *pBytesRead, unsigned long dwLenRead);


cgosret_bool CgosI2CGetMaxFrequency(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting); // 1.3