tools/CgosPy_1_2/cgos/cgos.py

		
	cgosvgainfo = CGOSVGAINFO(0)
	cgosvgainfo.dwSize = len((cgosvgainfo._fields_) * ctypes.sizeof(ctypes.c_uint32))
	_cgos.CgosVgaGetInfo.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_voidp)
	_cgos.CgosVgaGetInfo.restype = ctypes.c_bool
	if (_cgos.CgosVgaGetInfo(hCgos, dwUnit, ctypes.addressof(cgosvgainfo))) == True:
		results = {}
		for field in cgosvgainfo._fields_: results[field[0]] = getattr(cgosvgainfo, field[0])
		return results
	else: return False

# cgosret_bool CgosVgaGetContrast(HCGOS hCgos, unsigned int dwUnit, unsigned int *pdwSetting);
def vgaGetContrast(dwUnit):
	_cgos.CgosVgaGetContrast.argtypes = (ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint))
	_cgos.CgosVgaGetContrast.restype = ctypes.c_bool
	pdwSetting = ctypes.c_uint(0)
	if _cgos.CgosVgaGetContrast(hCgos, dwUnit, ctypes.byref(pdwSetting)) == True: return pdwSetting.value
	else: return False

# cgosret_bool CgosVgaSetContrast(HCGOS hCgos, unsigned int dwUnit, unsigned int dwSetting);
def vgaSetContrast (dwUnit, dwSetting):
	_cgos.CgosVgaSetContrast.argtypes = (ctypes.c_uint, ctypes.c_uint, ctypes.c_uint)
	_cgos.CgosVgaSetContrast.restype = ctypes.c_bool
	return _cgos.CgosVgaSetContrast(hCgos, dwUnit, dwSetting)

# cgosret_bool CgosVgaGetContrastEnable(HCGOS hCgos, unsigned int dwUnit, unsigned int *pdwSetting);
def vgaGetContrastEnable(dwUnit):
	_cgos.CgosVgaGetContrastEnable.argtypes = (ctypes.c_uint, ctypes.c_uint, ctypes.POINTER(ctypes.c_uint))
	_cgos.CgosVgaGetContrastEnable.restype = ctypes.c_bool
	pdwSetting = ctypes.c_uint(0)
	if _cgos.CgosVgaGetContrastEnable(hCgos, dwUnit, ctypes.byref(pdwSetting)) == True: return pdwSetting.value
	else: return False

# cgosret_bool CgosVgaSetContrastEnable(HCGOS hCgos, unsigned int dwUnit, unsigned int dwSetting);
def vgaSetContrastEnable (dwUnit, dwSetting):
	_cgos.CgosVgaSetContrastEnable.argtypes = (ctypes.c_uint, ctypes.c_uint, ctypes.c_uint)
	_cgos.CgosVgaSetContrastEnable.restype = ctypes.c_bool
	return _cgos.CgosVgaSetContrastEnable(hCgos, dwUnit, dwSetting)

	######################################
	##### FUNCTION GROUP CGOSSTORAGE #####
	######################################

# ulong CgosStorageAreaCount(HCGOS hCgos, unsigned long dwUnit)
def storageAreaCount(dwUnit):
	_cgos.CgosStorageAreaCount.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosStorageAreaCount.restype = ctypes.c_ulong
	return _cgos.CgosStorageAreaCount(hCgos, dwUnit)

# ulong CgosStorageAreaType(HCGOS hCgos, unsigned long dwUnit)
def storageAreaType(dwUnit):
	_cgos.CgosStorageAreaType.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosStorageAreaType.restype = ctypes.c_ulong
	return _cgos.CgosStorageAreaType(hCgos, dwUnit)

# ulong CgosStorageAreaSize(HCGOS hCgos, unsigned long dwUnit)
def storageAreaSize (dwUnit):
	_cgos.CgosStorageAreaSize.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosStorageAreaSize.restype = ctypes.c_ulong
	return _cgos.CgosStorageAreaSize(hCgos, dwUnit)

# ulong CgosStorageAreaBlockSize(HCGOS hCgos, unsigned long dwUnit)
def storageAreaBlockSize(dwUnit):
	_cgos.CgosStorageAreaBlockSize.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosStorageAreaBlockSize.restype = ctypes.c_ulong
	return _cgos.CgosStorageAreaBlockSize(hCgos,dwUnit)

# bool CgosStorageAreaRead(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned char *pBytes, unsigned long dwLen)
def storageAreaRead(dwUnit, dwOffset, dwLen):
	array_type = ctypes.c_ubyte * dwLen
	read_buffer = array_type()
	_cgos.CgosStorageAreaRead.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.POINTER(array_type), ctypes.c_ulong)
	_cgos.CgosStorageAreaRead.restype = ctypes.c_bool
	if (_cgos.CgosStorageAreaRead(hCgos, dwUnit, dwOffset, read_buffer, dwLen)) == True: 
		ret_list = []
		for i in read_buffer: ret_list.append(hex(i))
		return ret_list
	else:  return False

# bool CgosStorageAreaWrite(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned char *pBytes, unsigned long dwLen)
def storageAreaWrite(dwUnit, dwOffset, pBytes, dwLen):
	array_type = ctypes.c_ubyte * dwLen
	write_buffer = array_type()
	for i in range (0,dwLen): write_buffer[i] = pBytes[i]
	_cgos.CgosStorageAreaWrite.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.POINTER(array_type), ctypes.c_ulong)
	_cgos.CgosStorageAreaWrite.restype = ctypes.c_bool
	return (_cgos.CgosStorageAreaWrite(hCgos, dwUnit, dwOffset, write_buffer, dwLen))

# bool CgosStorageAreaErase(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned long dwLen)
def storageAreaErase(dwUnit, dwOffset, dwLen):
	_cgos.CgosStorageAreaErase.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosStorageAreaErase.restype = ctypes.c_bool
	return _cgos.CgosStorageAreaErase(hCgos, dwUnit, dwOffset, dwLen)

# bool CgosStorageAreaEraseStatus(HCGOS hCgos, unsigned long dwUnit, unsigned long dwOffset, unsigned long dwLen, unsigned long *lpStatus)
def storageAreaEraseStatus(dwUnit, dwOffset, dwLen):
	_cgos.CgosStorageAreaEraseStatus.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosStorageAreaEraseStatus.restype = ctypes.c_bool
	lpStatus = ctypes.c_ulong(0)
	if( _cgos.CgosStorageAreaEraseStatus(hCgos, dwUnit, dwOffset, dwLen, ctypes.byref(lpStatus))) == True: return lpStatus.value
	else: return False

# bool CgosStorageAreaLock(HCGOS hCgos, unsigned long dwUnit, unsigned long dwFlags, unsigned char *pBytes, unsigned long dwLen)
def storageAreaLock(dwUnit, pBytes):
	#MOD003_cgos.CgosStorageAreaLock.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_char_p, ctypes.c_ulong)
	_cgos.CgosStorageAreaLock.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_wchar_p, ctypes.c_ulong) #MOD003
	_cgos.CgosStorageAreaLock.restype = ctypes.c_bool
	#MOD003secret_string = ctypes.create_string_buffer(pBytes)
	secret_string = ctypes.create_unicode_buffer(pBytes)
	dwLen = len(pBytes)
	#dwFlags is reserved for future use -> set to 0
	return _cgos.CgosStorageAreaLock(hCgos, dwUnit, 0, secret_string, dwLen)

# bool CgosStorageAreaUnlock(HCGOS hCgos, unsigned long dwUnit, unsigned long dwFlags, unsigned char *pBytes, unsigned long dwLen)
def storageAreaUnlock(dwUnit, pBytes):
	#MOD003 _cgos.CgosStorageAreaUnlock.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_char_p, ctypes.c_ulong)
	_cgos.CgosStorageAreaUnlock.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong, ctypes.c_wchar_p, ctypes.c_ulong) #MOD003
	_cgos.CgosStorageAreaUnlock.restype = ctypes.c_bool
	#MOD003secret_string = ctypes.create_string_buffer(pBytes)
	secret_string = ctypes.create_unicode_buffer(pBytes) #MOD003
	dwLen = len(pBytes)
	#dwFlags is reserved for future use -> set to 0
	return _cgos.CgosStorageAreaUnlock(hCgos, dwUnit, 0, secret_string, dwLen)

# bool CgosStorageAreaIsLocked(HCGOS hCgos, unsigned long dwUnit, unsigned long dwFlags)
def storageAreaIsLocked(dwUnit):
	_cgos.CgosStorageAreaIsLocked.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ulong)
	_cgos.CgosStorageAreaIsLocked.restype = ctypes.c_bool
	#dwFlags is reserved for future use -> set to 0
	return _cgos.CgosStorageAreaIsLocked(hCgos, dwUnit, 0)

	##################################
	#####   FUNCTION GROUP I2C   #####
	##################################

# ulong CgosI2CCount(HCGOS hCgos)
def i2cCount():
	_cgos.CgosI2CCount.argtype = ctypes.c_uint
	_cgos.CgosI2CCount.restype = ctypes.c_ulong
	return _cgos.CgosI2CCount(hCgos)

# ulong CgosI2CType(HCGOS hCgos, unsigned long dwUnit)
def i2cType(dwUnit):
	_cgos.CgosI2CType.argtypes = (ctypes.c_uint, ctypes.c_uint)
	_cgos.CgosI2CType.restype = ctypes.c_uint
	return _cgos.CgosI2CType(hCgos, dwUnit)

# bool CgosI2CIsAvailable(HCGOS hCgos, unsigned long dwUnit)
def i2cIsAvailable(dwUnit):
	_cgos.CgosI2CIsAvailable.argtypes = (ctypes.c_uint, ctypes.c_ulong)
	_cgos.CgosI2CIsAvailable.restype = ctypes.c_bool
	return _cgos.CgosI2CIsAvailable(hCgos, dwUnit)

# bool CgosI2CRead(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned char *pBytes, unsigned long dwLen)
def i2cRead(dwUnit, bAddr, dwLen):
	array_type = ctypes.c_ubyte * dwLen
	read_buffer = array_type()
	_cgos.CgosI2CRead.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ubyte, ctypes.POINTER(array_type), ctypes.c_ulong)
	_cgos.CgosI2CRead.restype = ctypes.c_bool
	if (_cgos.CgosI2CRead(hCgos, dwUnit, bAddr, read_buffer, dwLen)) == True:
		ret_list = []
		for i in read_buffer: ret_list.append(hex(i)) 
		return ret_list
	else: return False

# bool CgosI2CWrite(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned char *pBytes, unsigned long dwLen)
def i2cWrite(dwUnit, bAddr, pBytes, dwLen):
	array_type = ctypes.c_ubyte * dwLen
	write_buffer = array_type()
	for i in range (0,dwLen): write_buffer[i] = pBytes[i]
	_cgos.CgosI2CWrite.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ubyte, array_type, ctypes.c_ulong)
	_cgos.CgosI2CWrite.restype = ctypes.c_bool
	return _cgos.CgosI2CWrite(hCgos, dwUnit, bAddr, write_buffer, dwLen)

# bool CgosI2CReadRegister(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned short wReg, unsigned char *pDataByte)
def i2cReadRegister(dwUnit, bAddr, wReg):
	array_type = ctypes.c_ubyte * 1
	read_buffer = array_type()
	_cgos.CgosI2CReadRegister.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ubyte, ctypes.c_ubyte, array_type)
	_cgos.CgosI2CReadRegister.restype = ctypes.c_bool
	if (_cgos.CgosI2CReadRegister(hCgos, dwUnit, bAddr, wReg, read_buffer)) == True: return hex(read_buffer[0])
	else: return False

# bool CgosI2CWriteRegister(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned short wReg, unsigned char bData)
def i2cWriteRegister(dwUnit, bAddr, wReg, bData):
	array_type = ctypes.c_ubyte * 2
	writebuffer = array_type()
	writebuffer[0] = bData
	_cgos.CgosI2CWriteRegister.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ubyte, ctypes.c_ushort, ctypes.c_ubyte)
	_cgos.CgosI2CWriteRegister.restype = ctypes.c_bool
	return _cgos.CgosI2CWriteRegister(hCgos,dwUnit,bAddr,wReg,writebuffer[0])

# bool CgosI2CWriteReadCombined(HCGOS hCgos, unsigned long dwUnit, unsigned char bAddr, unsigned char *pBytesWrite, unsigned long dwLenWrite, unsigned char *pBytesRead, unsigned long dwLenRead)
def i2cWriteReadCombined(dwUnit, bAddr, pBytesWrite, dwLenWrite, dwLenRead):
	#MOD002 v
	#array_type_write = ctypes.c_uint * dwLenWrite
	#array_type_read = ctypes.c_uint * dwLenRead
	array_type_write = ctypes.c_ubyte * dwLenWrite
	array_type_read = ctypes.c_ubyte * dwLenRead
	#MOD002 ^
	write_buffer = array_type_write()
	read_buffer = array_type_read()
	for i in range (0,dwLenWrite): write_buffer[i] = pBytesWrite[i]
	_cgos.CgosI2CWriteReadCombined.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.c_ubyte, array_type_write, ctypes.c_ulong, ctypes.POINTER(array_type_read), ctypes.c_ulong)
	_cgos.CgosI2CWriteReadCombined.restype = ctypes.c_bool
	if (_cgos.CgosI2CWriteReadCombined(hCgos, dwUnit, bAddr, write_buffer, dwLenWrite, read_buffer, dwLenRead)) == True: 
		ret_list = []
		for i in read_buffer: ret_list.append(hex(i)) 
		return ret_list
	else: return False

# bool CgosI2CGetMaxFrequency(HCGOS hCgos, unsigned long dwUnit, unsigned long *pdwSetting)
def i2cGetMaxFrequency(dwUnit):
	_cgos.CgosI2CGetMaxFrequency.argtypes = (ctypes.c_uint, ctypes.c_ulong, ctypes.POINTER(ctypes.c_ulong))
	_cgos.CgosI2CGetMaxFrequency.restype = ctypes.c_bool
	pdwSetting = ctypes.c_ulong(0)
	if _cgos.CgosI2CGetMaxFrequency(hCgos, dwUnit,  pdwSetting) == True: return pdwSetting.value
	else: return False
